logs/yujin-tools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/catkin_make'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yujin_tools'...
Listing './lib/python3.5/site-packages/yujin_tools/cmake'...
Compiling './lib/python3.5/site-packages/yujin_tools/common.py'...
***   File "./lib/python3.5/site-packages/yujin_tools/common.py", line 155
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yujin_tools/data'...
Compiling './lib/python3.5/site-packages/yujin_tools/make.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (make.py, line 151)
Compiling './lib/python3.5/site-packages/yujin_tools/make_isolated.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (make_isolated.py, line 139)
Listing './lib/python3.5/site-packages/yujin_tools/platforms'...
Listing './lib/python3.5/site-packages/yujin_tools/platforms/arm'...
Listing './lib/python3.5/site-packages/yujin_tools/platforms/generic'...
Listing './lib/python3.5/site-packages/yujin_tools/platforms/intel'...
Compiling './lib/python3.5/site-packages/yujin_tools/settings.py'...
***   File "./lib/python3.5/site-packages/yujin_tools/settings.py", line 127
    print get_default_track()
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yujin_tools/templates'...
Listing './lib/python3.5/site-packages/yujin_tools/templates/init_build'...
Listing './lib/python3.5/site-packages/yujin_tools/toolchains'...
Listing './lib/python3.5/site-packages/yujin_tools/toolchains/buildroot'...
Listing './lib/python3.5/site-packages/yujin_tools/toolchains/code_sourcery'...
Listing './lib/python3.5/site-packages/yujin_tools/toolchains/nexell'...
Listing './lib/python3.5/site-packages/yujin_tools/toolchains/ubuntu'...
Listing './lib/python3.5/site-packages/yujin_tools-0.4.54.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
